@@ -1,10 +1,11 @@
+
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 /**
  *
  * Build file for the 'JavaFX Desktop' module of this Kotlin Multi-platform Application.
  *
  */
-
-import de.dynamicfiles.projects.gradle.plugins.javafx.JavaFXGradlePluginExtension
 
 buildscript {
 
@@ -27,7 +28,6 @@ buildscript {
     }
 
     dependencies {
-        classpath("de.dynamicfiles.projects.gradle.plugins:javafx-gradle-plugin:8.8.2")
         classpath(kotlin("gradle-plugin", version = kotlinVersion))
         classpath(kotlinSerializationPlugin)
     }
@@ -55,111 +55,35 @@ val jUnit : String by extra
 val clientCommonProject : ()->ProjectDependency by extra
 val sharedProject       : ()->ProjectDependency by extra
 
-//val moduleName = "exampleApp"
-
-apply( plugin = "javafx-gradle-plugin" )
+val iosTargetName : String by extra
 
 plugins {
     val kotlinVersion = "1.3.40"
-    id("application")
     kotlin("jvm" ) version kotlinVersion
+    //id("application")
     id("kotlinx-serialization") version kotlinVersion
+    id("org.openjfx.javafxplugin") version "0.0.7"
+    id("org.beryx.runtime") version "1.2.1"
 }
 
 val myMainClassName = "org.chrishatton.example.ExampleApp"
 val myVendor = "org.chrishatton"
 
-extensions.findByType<JavaFXGradlePluginExtension>()!!.apply {
-
-    vendor = myVendor
-
-    isVerbose = true
-    mainClass = myMainClassName
-    jfxAppOutputDir = "build/jfx/app"
-    jfxMainAppJarName = "project-jfx.jar"
-    deployDir = "src/main/deploy"
-    isUseEnvironmentRelativeExecutables = true
-    libFolderName = "lib"
-
-    // gradle jfxJar
-    isCss2bin = false
-    preLoader = null // String
-    isUpdateExistingJar = false
-    isAllPermissions = false
-    manifestAttributes = null // Map<String, String>
-    isAddPackagerJar = true
-    isCopyAdditionalAppResourcesToJar = false
-    isSkipCopyingDependencies = false
-    isUseLibFolderContentForManifestClasspath = false
-    fixedManifestClasspath = null
-
-    // gradle jfxNative
-    identifier = null  // String - setting this for windows-bundlers makes it possible to generate upgradeable installers (using same GUID)
-    nativeOutputDir = "build/jfx/native"
-    bundler = "ALL" // set this to some specific, if your don't want all bundlers running, examples "windows.app", "jnlp", ...
-    jvmProperties = null // Map<String, String>
-    jvmArgs = null // List<String>
-    userJvmArgs = null // Map<String, String>
-    launcherArguments = null // List<String>
-    nativeReleaseVersion = "1.0"
-    isNeedShortcut = false
-    isNeedMenu = false
-    bundleArguments = mapOf(
-        // dont bundle JRE (not recommended, but increases build-size/-speed)
-        //runtime to null
-    )
-    appName = "project" // this is used for files below "src/main/deploy", e.g. "src/main/deploy/package/windows/project.ico"
-    additionalBundlerResources = null // path to some additional resources for the bundlers when creating application-bundle
-    additionalAppResources = null // path to some additional resources when creating application-bundle
-    //secondaryLaunchers = listOf(mapOf(appName to "somethingDifferent"), mapOf(appName to "somethingDifferent2"))
-    fileAssociations = null // List<Map<String, Object>>
-    isNoBlobSigning = false // when using bundler "jnlp", you can choose to NOT use blob signing
-    customBundlers = null // List<String>
-    isFailOnError = false
-    isOnlyCustomBundlers = false
-    isSkipJNLP = false
-    isSkipNativeVersionNumberSanitizing = false // anything than numbers or dots are removed
-    additionalJarsignerParameters = null // List<String>
-    isSkipMainClassScanning = false // set to true might increase build-speed
-
-    isSkipNativeLauncherWorkaround124 = false
-    isSkipNativeLauncherWorkaround167 = false
-    isSkipNativeLauncherWorkaround205 = false
-    isSkipJNLPRessourcePathWorkaround182 = false
-    isSkipSigningJarFilesJNLP185 = false
-    isSkipSizeRecalculationForJNLP185 = false
-    isSkipMacBundlerWorkaround = false
-
-    // gradle jfxRun
-    runJavaParameter = null // String
-    runAppParameter = null // String
-
-    // per default the outcome of the gradle "jarTask" will be used, set this to specify otherwise (like proguard-output)
-    alternativePathToJarFile = null // String
-
-    // to disable patching of ant-javafx.jar, set this to false
-    isUsePatchedJFXAntLib = true
-
-    // making it able to support absolute paths, defaults to "false" for maintaining old behaviour
-    isCheckForAbsolutePaths = false
-
-    // gradle jfxGenerateKeyStore
-    keyStore = "src/main/deploy/keystore.jks"
-    keyStoreAlias = "myalias"
-    keyStorePassword = "password"
-    keyPassword = null // will default to keyStorePassword
-    keyStoreType = "jks"
-    isOverwriteKeyStore = false
-
-    certDomain = null // required
-    certOrgUnit = null // defaults to "none"
-    certOrg = null // required
-    certState = null // required
-    certCountry = null // required
-}
-
 application {
     mainClassName = myMainClassName
+}
+
+javafx {
+    version = "12"
+    modules("javafx.controls","javafx.fxml")
+}
+
+tasks.withType<KotlinCompile> {
+    group   = "org.chrishatton.example"
+    version = "1.0"
+
+    sourceCompatibility = JavaVersion.VERSION_12.toString()
+    targetCompatibility = JavaVersion.VERSION_12.toString()
 }
 
 tasks.withType<JavaCompile> {
@@ -167,9 +91,15 @@ tasks.withType<JavaCompile> {
     group   = "org.chrishatton.example"
     version = "1.0"
 
-    sourceCompatibility = JavaVersion.VERSION_1_8.toString()
-    targetCompatibility = JavaVersion.VERSION_1_8.toString()
+    sourceCompatibility = JavaVersion.VERSION_12.toString()
+    targetCompatibility = JavaVersion.VERSION_12.toString()
 
+    doFirst {
+        options.compilerArgs = options.compilerArgs + listOf(
+            "--module-path",classpath.asPath,
+            "--add-modules","javafx.controls,javafx.fxml"
+        )
+    }
 }
 
 repositories {
@@ -177,6 +107,7 @@ repositories {
     jcenter()
     maven( url = "https://kotlin.bintray.com/kotlinx" )
     maven( url = "https://kotlin.bintray.com/kotlin/ktor" )
+    maven( url = "https://oss.sonatype.org/content/repositories/snapshots/" )
 }
 
 dependencies {
@@ -197,7 +128,27 @@ dependencies {
     implementation(ktorClientCio)
     implementation(ktorClientJson)
 
+    // JavaFX
+    compileClasspath(fileTree("/Users/Chris/Programming/javafx-jmods-12.0.1/"))
+
+    implementation(javaFxBase)
+    implementation(javaFxGraphics)
+    implementation(javaFxControls)
+    implementation(javaFxFxml)
+
+    // Test
     testImplementation(jUnit)
     testImplementation(kotlin("test"))
     testImplementation(kotlin("test-junit"))
+}
+
+runtime {
+    addOptions(
+        "--strip-debug",
+        "--compress", "2",
+        "--no-header-files",
+        "--no-man-pages",
+        "--module-path", sourceSets["main"].compileClasspath.asPath,
+        "--add-modules", "javafx.controls,javafx.fxml"
+    )
 }
